--- a/.gitignore
+++ b/.gitignore
@@ -1,160 +1,141 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+import tkinter as tk
+from tkinter import ttk
+import sqlite3
 
-# C extensions
-*.so
+# Создание SQLite базы данных и таблицы
+conn = sqlite3.connect('employee.db')
+cursor = conn.cursor()
+cursor.execute('''
+    CREATE TABLE IF NOT EXISTS employees (
+        id INTEGER PRIMARY KEY AUTOINCREMENT,
+        name TEXT,
+        phone TEXT,
+        email TEXT,
+        salary REAL
+    )
+''')
+conn.commit()
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+# Функция для добавления сотрудника в базу данных
+def add_employee():
+    name = name_entry.get()
+    phone = phone_entry.get()
+    email = email_entry.get()
+    salary = float(salary_entry.get())
+    cursor.execute('INSERT INTO employees (name, phone, email, salary) VALUES (?, ?, ?, ?)',
+                   (name, phone, email, salary))
+    conn.commit()
+    update_treeview()
+    clear_entries()
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+# Функция для обновления данных о сотруднике
+def update_employee():
+    selected_item = treeview.selection()
+    if selected_item:
+        name = name_entry.get()
+        phone = phone_entry.get()
+        email = email_entry.get()
+        salary = float(salary_entry.get())
+        employee_id = treeview.item(selected_item)['values'][0]
+        cursor.execute('UPDATE employees SET name=?, phone=?, email=?, salary=? WHERE id=?',
+                       (name, phone, email, salary, employee_id))
+        conn.commit()
+        update_treeview()
+        clear_entries()
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+# Функция для удаления сотрудника
+def delete_employee():
+    selected_item = treeview.selection()
+    if selected_item:
+        employee_id = treeview.item(selected_item)['values'][0]
+        cursor.execute('DELETE FROM employees WHERE id=?', (employee_id,))
+        conn.commit()
+        update_treeview()
+        clear_entries()
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
+# Функция для поиска сотрудника по ФИО
+def search_employee():
+    name = search_entry.get()
+    cursor.execute('SELECT * FROM employees WHERE name LIKE ?', ('%' + name + '%',))
+    data = cursor.fetchall()
+    update_treeview(data)
 
-# Translations
-*.mo
-*.pot
+# Функция для очистки полей ввода
+def clear_entries():
+    name_entry.delete(0, 'end')
+    phone_entry.delete(0, 'end')
+    email_entry.delete(0, 'end')
+    salary_entry.delete(0, 'end')
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
+# Функция для обновления данных в Treeview
+def update_treeview(data=None):
+    treeview.delete(*treeview.get_children())
+    if data is None:
+        cursor.execute('SELECT * FROM employees')
+        data = cursor.fetchall()
+    for row in data:
+        treeview.insert('', 'end', values=row)
 
-# Flask stuff:
-instance/
-.webassets-cache
+# Создание графического интерфейса
+root = tk.Tk()
+root.title('Список сотрудников компании')
 
-# Scrapy stuff:
-.scrapy
+frame1 = ttk.Frame(root)
+frame1.grid(row=0, column=0, padx=10, pady=10)
 
-# Sphinx documentation
-docs/_build/
+name_label = ttk.Label(frame1, text='ФИО:')
+name_label.grid(row=0, column=0)
+name_entry = ttk.Entry(frame1)
+name_entry.grid(row=0, column=1)
 
-# PyBuilder
-.pybuilder/
-target/
+phone_label = ttk.Label(frame1, text='Номер телефона:')
+phone_label.grid(row=1, column=0)
+phone_entry = ttk.Entry(frame1)
+phone_entry.grid(row=1, column=1)
 
-# Jupyter Notebook
-.ipynb_checkpoints
+email_label = ttk.Label(frame1, text='Адрес электронной почты:')
+email_label.grid(row=2, column=0)
+email_entry = ttk.Entry(frame1)
+email_entry.grid(row=2, column=1)
 
-# IPython
-profile_default/
-ipython_config.py
+salary_label = ttk.Label(frame1, text='Заработная плата:')
+salary_label.grid(row=3, column=0)
+salary_entry = ttk.Entry(frame1)
+salary_entry.grid(row=3, column=1)
 
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+add_button = ttk.Button(frame1, text='Добавить', command=add_employee)
+add_button.grid(row=4, column=0)
+update_button = ttk.Button(frame1, text='Обновить', command=update_employee)
+update_button.grid(row=4, column=1)
+delete_button = ttk.Button(frame1, text='Удалить', command=delete_employee)
+delete_button.grid(row=4, column=2)
 
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
+frame2 = ttk.Frame(root)
+frame2.grid(row=0, column=1, padx=10, pady=10)
 
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
+search_label = ttk.Label(frame2, text='Поиск по ФИО:')
+search_label.grid(row=0, column=0)
+search_entry = ttk.Entry(frame2)
+search_entry.grid(row=0, column=1)
+search_button = ttk.Button(frame2, text='Поиск', command=search_employee)
+search_button.grid(row=0, column=2)
 
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/#use-with-ide
-.pdm.toml
+treeview = ttk.Treeview(frame2, columns=('ID', 'ФИО', 'Телефон', 'Email', 'Зарплата'), show='headings')
+treeview.column('ID', width=30)
+treeview.column('ФИО', width=150)
+treeview.column('Телефон', width=100)
+treeview.column('Email', width=150)
+treeview.column('Зарплата', width=80)
+treeview.heading('ID', text='ID')
+treeview.heading('ФИО', text='ФИО')
+treeview.heading('Телефон', text='Телефон')
+treeview.heading('Email', text='Email')
+treeview.heading('Зарплата', text='Зарплата')
+treeview.grid(row=1, column=0, columnspan=3)
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
+update_treeview()
 
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
+root.mainloop()
 
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
-
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+# Закрытие соединения с базой данных при завершении программы
+conn.close()
